--- a/posts/deep_work_1/productividad_satisfacción_deep_work.qmd
+++ b/posts/deep_work_1/productividad_satisfacción_deep_work.qmd
@@ -8,7 +8,7 @@ image: "image.jpg"
 
 El 28 de junio de este año Nike presentó sus resultados financieros del 2º trimestre. Ese mismo día, sus acciones en bolsa cayeron un 20%: perdieron $25000$ millones de dólares en un solo día.
 
-Con eso acumulaban en 9 meses la friolera de $70000$ millones de dólares perdidos y conseguían el dudoso honor de alcanzar el mínimo en bolsa desde 2018, $-32$% desde principio de año.
+Con eso acumulaban en 9 meses la friolera de $70000$ millones de dólares de capital volatilizados y conseguían el dudoso honor de alcanzar el mínimo en bolsa desde 2018, $-32$% desde principio de año.
 
 En Nike lo llaman "El Día del Juicio".
 
