+ en post deepwork

--- a/posts/deep_work_1/productividad_satisfacción_deep_work.qmd
+++ b/posts/deep_work_1/productividad_satisfacción_deep_work.qmd
@@ -61,3 +61,20 @@ Nike invirtió grandes sumas de dinero en marketing digital y programático porq
 Pero, un momento. ¿No se atribuye a Peter Drucker la frase "If you can’t measure it, you can’t manage it."? Y, si lo dijo Drucker...
 
 En una empresa, todo lo relevante al negocio y su gestión ¿se ***puede*** medir? ¿se ***sabe*** medir? ¿se ***quiere*** medir? ¿se ***debe*** medir? ¿***merece la pena*** medirlo?
+
+# Y esto ¿a qué viene?
+
+Tienes razón: este artículo se titula "Productividad y satisfacción laboral en la Economía del Conocimiento". Y aquí estoy hablando de Nike y de sus problemas con el marketing digital.
+
+Te contaré lo que sucedió: cuando leí [Nike: An Epic Saga of Value Destruction](https://www.linkedin.com/pulse/nike-epic-saga-value-destruction-massimo-giunco-llplf/) este verano, poco después de que ocurrieran los hechos, yo estaba releyendo ["Céntrate (Deep Work)"](https://www.amazon.es/s?k=C%C3%A9ntrate+%28Deep+Work%29&i=digital-text&__mk_es_ES=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3MQNAM3K7ZUR5&sprefix=c%C3%A9ntrate+deep+work+%2Cdigital-text%2C121&ref=nb_sb_noss_2) de Cal Newport. Lo había recomendado Kiko Llaneras en Linkedin ([¿Qué leer? Un montón libros sobre tecnología y alrededores](https://www.linkedin.com/pulse/qu%C3%A9-leer-un-mont%C3%B3n-libros-sobre-tecnolog%C3%ADa-y-kiko-llaneras/?trackingId=sbAE83gwQnSL%2F%2F1yhb80ug%3D%3D)) y tenía pendiente releerlo.
+
+Este libro si que trata de, entre otras cosas, productividad y satisfacción laboral (¡y personal!).
+
+El caso es que leyendo y releyendo respectivamente ambos, se "cruzaron" algunas ideas de los dos.
+
+El epicentro del cruce era la moraleja que nos ha enseñado "El Día del Juicio" de Nike: puede que lo más
+eficiente no sea implementar lo que es más fácil de medir. Y eso plantea reflexiones sobre la gestión de la productividad
+y la satisfacción personal y laboral, especialmente en los trabajos intensivos en conocimiento, que cada vez son más. Y lo hace desde el ámbito individual hasta el organizacional.
+
+
+
